# civibot

./: .gitignore  .python-version  CONFIG.md  README.md  codigo.sql  create_faqs_table.sql  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .python-version  README.md
backend/api/: .env.example  README.md  codigo.sql  pyproject.toml
backend/api/src/api/: generate_db.py  main.py  seed_data.py
backend/api/src/api/core/: config.py  deps.py  redis.py
backend/api/src/api/db/: supabase_client.py
backend/api/src/api/endpoints/: chat.py  citizens.py  departments.py  officials.py  procedures.py  tickets.py  turnos.py
backend/api/src/api/router/: chatbot.py
backend/api/src/api/schemas/: chat.py  department.py  official.py  turno.py
backend/api/src/api/v1/: api.py
backend/rasa-chat/: pyproject.toml
backend/rasa-chat/src/rasa-chat/: __init__.py  config.yml  credentials.yml  domain.yml  test_integration.py  whatsapp_connector.py
backend/rasa-chat/src/rasa-chat/actions/: actions.py  gcba_faqs_db.py
backend/rasa-chat/src/rasa-chat/data/: nlu.yml  rules.yml  stories.yml
backend/rasa/actions/: actions.py
front/: package-lock.json  package.json
front/app/: layout.tsx  page.tsx
front/components/: auth-button.tsx  chat-message.tsx  chatmodal.tsx  login-form.tsx  quickreplybutton.tsx  rasachat.tsx
front/hooks/: use-rasa-chat.tsx
front/lib/: openapi.ts
src/api/: add_address_column.sql  main.py  migrate_address.py  migrate_faqs.py  seed_data.py  seed_faqs.py  seed_procedures.py
tests/: conftest.py  test_endpoints.py
(+29 files in other folders)
