[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jonanfu",email = "jonanfu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "supabase (>=2.22.0,<3.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "faker (>=37.11.0,<38.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-jose[crytography] (>=3.5.0,<4.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"

]

[tool.poetry]
packages = [
    { include = "api", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"

[tool.poetry.scripts]
start = "uvicorn src.api.main:app --reload"
seed = "python src/api/seed_data.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
